# grpc_example

./: Cargo.toml  README.md  build.rs
proto/: payments.proto
src/: client.rs  server.rs
